<resources>
    <string name="app_name">PuzzleIt</string>
    <string name="logo">uzzle</string>
    <string name="developers">developers - Gal , Igal , Vova</string>
    <string name="game8">8 puzzle</string>
    <string name="game15">15 puzzle</string>
    <string name="game24">24 puzzle</string>
    <string name="Score">Score: </string>
    <string name="bestScore">Record: </string>
    <string name="you_won">You have won! Congratulations!</string>
    <string name="about_title">About:</string>
    <string name="about_text"><b>15 puzzle</b>\n\nThe number in the title game is set on the number of cells. Each cell is numbered. One of the cells is not occupied. The player can move the cells by the free cell. Goal of the game - moving the cells of the box to achieve the ordering of numbers in ascending order, it is desirable to making as little as possible moves. Cells moved by pressing.\n\nby: <b> Mr. Alex</b></string>
    <string name="button">button</string>
    <string name="buttonSound">Sound ON or OFF</string>
    <string name="notSave">Saving missing! Press a new game.</string>
    <string name="level15">15</string>
    <string name="level24">24</string>
    <string name="action_settings">Settings</string>
    <string name="firstLogo">P</string>
    <string name="full_logo">Puzzle It</string>
    <string name="play">Play</string>
    <string name="leader_board">Leader Board</string>
    <string name="setting">Setting</string>
    <string name="board_24">24 board</string>
    <string name="board_15">15 board</string>
    <string name="board_8">8 board</string>
    <string name="difficulty_levels">Difficulty levels</string>
    <string name="choose">Choose</string>
    <string name="information">information</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="choose_language">Choose Language</string>
    <string name="sound_setting">Sound Setting</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound OFF</string>
    <string name="accept_changes">Accept Changes</string>
    <string name="info_dialog_button">I got it</string>
    <string name="info_title">how to play?</string>
    <string name="info_text_init">It\'s very simple to start but hard to finish</string>
    <string name="info_text">1) First chose the size of the board.\n2) There is no need to shuffle… we will do it\nfor you.\n3) You are ready. Play and injoy. Your goal is to move the puzzle parts to their place: the sequence you dicided to solve.\n \nAlso, take a tip form us: if you are unhappy with the starting position, or made a mistake you can just shuffle again and start from the beginning.\n \nAnd remember not everything is possible.</string>
    <string name="finished_dialog_text">Congratulations \n You won the game in</string>
    <string name="finished_steps"> Steps</string>
    <string name="finished_name">Please Enter Your Name</string>
    <string name="finished_edittext">Enter you Name</string>
    <string name="finished_button">Submit</string>
    <string name="you_won_toast">You Won the game, Go Back and try the Harder Board</string>
    <string name="you_won_24">You won the most difficult level\' new levels will open soon</string>
    <string name="mute_unmute_sound">Mute/Unmute Sound</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="empty">Empty</string>
    <string name="zoo">Zoo</string>
    <string name="playZoo">Play</string>
    <string name="_3x3">3X3</string>
    <string name="_4x4">4X4</string>
    <string name="_5x5">5X5</string>
    <string name="hint">Hint</string>
    <string name="firstMsg">First time ?\nTry 8 Board\nfor a warm up.</string>
    <string name="secondMsg">do you feel\nluck today?\ntry 24 board</string>
    <string name="lastMsg">before trying 24 board\ntry first 15 Board</string>
    <string name="choose_puzzle">Choose Puzzle</string>

</resources>