<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="600dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_border"
    android:padding="20dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/baloo"
        android:text="@string/choose_puzzle"/>
    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:selectionRequired="true"
        android:layout_gravity="center"
        android:id="@+id/levelChipGroup"
        android:layout_marginBottom="15dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:singleSelection="true">
    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3x3"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/level3"
        android:checked="true"
        />
    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/_4x4"
        android:id="@+id/level4"
        />
        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/_5x5"
            android:id="@+id/level5"
            />
    </com.google.android.material.chip.ChipGroup>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:padding="10dp"
        android:layout_margin="30dp"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:paddingBottom="15dp"
        android:fadeScrollbars="false"
        android:background="@drawable/scroll_view_style">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:layoutDirection="ltr"
            android:background="@android:color/white"
            >
            <ImageButton
                android:id="@+id/lion"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/lion"
                style="@style/gridBGameStyle9"
                android:layout_margin="2dp"/>
            <ImageButton
                android:id="@+id/horse"
                android:layout_row="0"
                android:layout_column="1"
                android:src="@drawable/horse"
                android:layout_margin="2dp"
                style="@style/gridBGameStyle9"/>
            <ImageButton
                android:id="@+id/dolphin"
                android:src="@drawable/dolphin"
                android:layout_row="1"
                android:layout_margin="2dp"
                android:layout_column="0"
                style="@style/gridBGameStyle9"
/>
            <ImageButton
                android:id="@+id/dog"
                android:src="@drawable/dog"
                android:layout_margin="2dp"
                android:layout_row="1"
                android:layout_column="1"
                style="@style/gridBGameStyle9" />

            <ImageButton
                android:id="@+id/bird"
                android:layout_row="2"
                android:layout_margin="2dp"
                android:layout_column="0"
                android:src="@drawable/bird"
                style="@style/gridBGameStyle9" />
            <ImageButton
                android:id="@+id/elephant"
                android:layout_margin="2dp"
                android:layout_row="2"
                android:src="@drawable/elephant"
                android:layout_column="1"
                style="@style/gridBGameStyle9"/>
        </GridLayout>
    </ScrollView>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/playZoo"
        android:background="@drawable/menubutton" />

</LinearLayout>