<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/first_line"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:background="@drawable/white_line" />

        <View
            android:id="@+id/second_line"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/first_line"
            android:background="@drawable/orange_line" />

        <View
            android:id="@+id/third_line"
            android:layout_width="20dp"
            android:layout_height="250dp"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/second_line"
            android:background="@drawable/white_line" />

        <View
            android:id="@+id/fourth_line"
            android:layout_width="20dp"
            android:layout_height="200dp"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/third_line"
            android:background="@drawable/orange_line" />

        <View
            android:id="@+id/fiveth_line"
            android:layout_width="20dp"
            android:layout_height="220dp"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/fourth_line"
            android:background="@drawable/white_line" />

        <View
            android:id="@+id/sixth_line"
            android:layout_width="20dp"
            android:layout_height="150dp"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/fiveth_line"
            android:background="@drawable/yellow_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/logo"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/baloo"
            android:text="@string/firstLogo"
            android:textColor="@color/secondWood"
            android:layout_alignParentStart="true"
            android:textSize="80sp"
            android:id="@+id/startLogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/baloo"

            android:text="@string/logo"
            android:textColor="@android:color/white"
            android:textSize="80sp"
            android:layout_toEndOf="@id/startLogo"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:fontFamily="cursive"
                android:text="@string/developers"
                android:textColor="@android:color/secondary_text_light_nodisable"
                android:textSize="25sp"
                android:id="@+id/signature"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>